# Semantic_Search

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: frontend.py  index_data.py  main.py
app/core/: agent.py  db.py  engine.py
data/: items.json
